# DEXTER

./: .gitignore  Cargo.toml  README.md  clippy.toml  pyproject.toml  tarpaulin.toml  typos.toml
.github/workflows/: build_docs.yml  mdbook.yml
config/: Cargo.toml
config/src/: lib.rs  netcdf_fields.rs
crates/common/: Cargo.toml
crates/dexter/: Cargo.toml
crates/dexter-common/: Cargo.toml
crates/dexter-common/src/: lib.rs  macros.rs  threads.rs
crates/dexter-equilibrium/: Cargo.toml  README.md
crates/dexter-equilibrium/benches/: evaluations.rs
crates/dexter-equilibrium/src/: error.rs  eval.rs  extract.rs  flux.rs  lib.rs
crates/dexter-equilibrium/src/objects/: bfield.rs  cos_harmonic.rs  currents.rs  geometries.rs  getters.rs  harmonics.rs  mod.rs  nc_flux.rs  nc_harmonic.rs  perturbation.rs  qfactors.rs
crates/dexter-equilibrium/tests/: bfields.rs  currents.rs  data_extraction.rs  geometries.rs  harmonics.rs  perturbation.rs  qfactors.rs
crates/dexter-simulate/: Cargo.toml
crates/dexter-simulate/examples/: integrate.rs  integration.rs  intersect.rs  queue_classify.rs  queue_integrate.rs  queue_intersect.rs  stepping_method.rs
crates/dexter-simulate/src/: error.rs  lib.rs
crates/dexter-simulate/src/coms/: coms.rs  energy.rs  energy_pzeta_plane.rs  mod.rs  tp_boundary.rs
crates/dexter-simulate/src/particle/: close.rs  evolution.rs  initial.rs  integrate.rs  intersect.rs  mod.rs  orbit_classification.rs
crates/dexter-simulate/src/queue/: initials.rs  mod.rs  pbars.rs  stats.rs
crates/dexter-simulate/src/solve/: mod.rs  rkf45.rs
crates/dexter-simulate/src/state/: energy.rs  guiding_center.rs  mod.rs
crates/dexter-simulate/src/system/: mod.rs  rkf45.rs
crates/dexter-simulate/tests/: close.rs  common.rs  energy_pzeta_plane.rs  gc_intersect.rs  gc_poloidal_integration.rs  gc_toroidal_integration.rs  integrate.rs  integration_cache.rs  intersect.rs  orbit_classification.rs  queue_classify.rs  queue_close.rs  queue_integrate.rs  queue_intersect.rs  routine_errors.rs  stepping_methods.rs
crates/dexter/src/: lib.rs
crates/equilibrium/: Cargo.toml  README.md
crates/equilibrium/src/: bfields.rs  cache.rs  eval.rs  extract.rs  geometry.rs  lib.rs  qfactors.rs
crates/equilibrium/src/objects/: bfields.rs  currents.rs  geometries.rs  harmonics.rs  mod.rs  perturbations.rs  qfactors.rs
crates/equilibrium/tests/: bfields.rs  currents.rs  geometries.rs  harmonics.rs  perturbations.rs  qfactors.rs
crates/heap/: Cargo.toml
crates/heap/src/: initials.rs  progress_bars.rs
crates/particle/: Cargo.toml
crates/particle/src/: config.rs  evolution.rs  lib.rs  particle.rs  rkf45.rs  state.rs
crates/particle/src/routines/: frequencies.rs  henon.rs  integrate.rs  map.rs  mod.rs  single_period_integrate.rs
crates/particle/tests/: integration.rs  mapping.rs  single_period_integration.rs
crates/utils/: Cargo.toml
dexter-python/: Cargo.toml  README.md
dexter-python/dexter/: __init__.py  _core.pyi  types.py
dexter-python/dexter/plot/: __init__.py  bfield_plots.py  currents_plots.py  harmonic_plots.py  particle_plots.py  poincare_plots.py  qfactor_plots.py
dexter-python/dexter/scripts/: bfield_plot.py  currents_plot.py  flux_surfaces_plot.py  harmonic_plot.py  jacobian_plot.py  lar_netcdf.py  npz_to_netcdf.py  qfactor_plot.py  stub_npz.py
dexter-python/dexter/tools/: bfield_plot.py  currents_plot.py  flux_surfaces_plot.py  harmonic_plot.py  jacobian_plot.py  qfactor_plot.py
dexter-python/examples/: frequencies.py  frequency.py  integrate.py  map.py  poincare.py  poincare_const_theta.py  poincare_const_zeta.py
dexter-python/pytests/: conftest.py  test_pybfield.py  test_pycurrents.py  test_pygeometry.py  test_pyharmonic.py  test_pyheap.py  test_pyinitial_conditions.py  test_pyparticle.py  test_pyperturbation.py  test_pyqfactor.py
dexter-python/src/: lib.rs  pyerrors.rs  pyheap.rs  pylibrium.rs  pyparticle.rs
dexter-python/src/macros/: eval_macros.rs  mod.rs  pymethod_macros.rs
docs/: book.toml  mkdocs.yml  zensical.toml
docs/docs/: equilibrium.md  index.md  netcdf.md  parallelism.md  scripts.md
docs/src/: README.md  SUMMARY.md  equilibrium.md  netcdf_convention.md
equilibrium/: Cargo.toml
equilibrium/scripts/: npz_to_netcdf.py  stub_npz.py
equilibrium/src/: bfield.rs  currents.rs  extract.rs  geometry.rs  harmonic.rs  lib.rs  perturbation.rs  qfactor.rs
heap/: Cargo.toml
heap/src/: error.rs  heap.rs  initials.rs  lib.rs  progress_bars.rs  stats.rs
particle/: Cargo.toml
particle/src/: error.rs  evolution.rs  frequencies.rs  henon.rs  lib.rs  mapping.rs  particle.rs  rkf45.rs  state.rs
particle/src/routines/: frequencies.rs  henon.rs  mapping.rs  mod.rs
particle/tests/: normal_particle_int.rs  normal_particle_map.rs
poincare/: Cargo.toml
py-dexter/: Cargo.toml
py-dexter/dexter/: __init__.py  _core.pyi  common.py  registry.py  types.py
py-dexter/examples/: integrate_analytical_equilibrium.py  integrate_numerical_equilibrium.py  intersect_analytical_equilibrium.py  poincare_analytical_equilibrium.py
py-dexter/pytests/: conftest.py  test_energy_pzeta_plane.py  test_equilibrium.py  test_nc_equilibrium.py  test_plots.py  test_pybfields.py  test_pycoms.py  test_pycurrents.py  test_pygeometries.py  test_pyharmonics.py  test_pyparticle.py  test_pyperturbation.py  test_pyqfactors.py  test_pyqueue.py  test_units.py
py-dexter/scripts/: bfield_plot.py  boozer_theta_plot.py  flux_surface_plot.py  midplane_plot.py
py-dexter/src/: lib.rs  pybfields.rs  pycommon.rs  pycoms.rs  pycurrents.rs  pyerror.rs  pygeometries.rs  pyharmonics.rs  pylibrium.rs  pylibrium_misc.rs  pyparticle.rs  pyperturbation.rs  pyqfactors.rs  pyqueue.rs  pysimulate.rs
pyncare/: Cargo.toml
pyncare/pytests/: conftest.py  test_pybfield.py  test_pyharmonic.py  (+2 more)
scripts/: bfield_plot.py  currents_plot.py  harmonic_plot.py  particle_integrate.py  particle_map.py  particle_omega_theta.py  poincare.py  poincare_reversal.py  qfactor_plot.py
tools/: create_test_netcdf.py  create_test_netcdf.sh  falcon_to_dexter.py
utils/: Cargo.toml
(+112 files in other folders)
