[workspace]
resolver = "3"
members = [
    "crates/dexter-common",
    "crates/dexter-equilibrium",
    "crates/dexter-simulate",
    "crates/dexter",
    "py-dexter",
]
default-members = [
    "crates/*",
]

[workspace.dependencies]
approx = "0.5.1"
ndarray = "0.17.2"
thiserror = "2.0.18"
criterion = "0.8.2"
rsl-interpolation = { version = "0.1.19-pre.1", features = ["openblas-system"]}

dexter = { path = "crates/dexter" }
dexter-common = { path = "crates/dexter-common" }
dexter-equilibrium = { path = "crates/dexter-equilibrium" }
dexter-simulate = { path = "crates/dexter-simulate" }

[workspace.package]
authors = ["George Tsiamasiotis"]
edition = "2024"
rust-version = "1.91.1"
license = "GPL-3.0-only"
homepage = "https://github.com/George-Tsiamasiotis/DEXTER"
repository = "https://github.com/George-Tsiamasiotis/DEXTER"
documentation = "https://github.com/George-Tsiamasiotis/DEXTER"
description = "Calculations and simulations in reconstructed equilibria of toroidal fusion devices."

[workspace.metadata]
netcdf_version = "0.0.1"

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# Bevy tip

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
