[workspace]
resolver = "3"
members = [
    "crates/dexter-common",
    "crates/dexter-equilibrium",
    "crates/dexter-simulate",
    "crates/dexter",
    "py-dexter",
]
default-members = [
    "crates/*",
]

[workspace.dependencies]
approx = "0.5.1"
ndarray = "0.17.2"
thiserror = "2.0.18"
criterion = "0.8.2"
rsl-interpolation = { version = "0.1.19-pre.1", features = ["openblas-system"]}

dexter = { path = "crates/dexter" }
dexter-common = { path = "crates/dexter-common" }
dexter-equilibrium = { path = "crates/dexter-equilibrium" }
dexter-simulate = { path = "crates/dexter-simulate" }

[workspace.package]
authors = ["George Tsiamasiotis"]
edition = "2024"
rust-version = "1.91.1"
license = "GPL-3.0-only"
homepage = "https://github.com/George-Tsiamasiotis/DEXTER"
repository = "https://github.com/George-Tsiamasiotis/DEXTER"
documentation = "https://github.com/George-Tsiamasiotis/DEXTER"
description = "Calculations and simulations in reconstructed equilibria of toroidal fusion devices."
keywords = ["dexter", "physics", "plasma", "fusion"]
categories = ["science", "simulation", "visualization"]

[workspace.metadata]
netcdf_version = "0.0.1"

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# Bevy tip

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# ==========================================================================

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
nonstandard-style = "deny"
redundant_imports = "warn"
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"
unused_results = "warn"
ambiguous_negative_literals = "warn"

[workspace.lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "warn"
assigning_clones = "warn"
branches_sharing_code = "warn"
cfg_not_test = "deny"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_script_idents = "allow"
doc_broken_link = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
doc_paragraphs_missing_punctuation = "warn"
else_if_without_else = "warn"
enum_glob_use = "deny"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
impl_trait_in_params = "deny"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
integer_division = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
macro_use_imports = "forbid"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
min_ident_chars = "deny"
mismatching_type_param_order = "warn"
missing_assert_message = "deny"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "deny"
modulo_arithmetic = "deny" # use `rem_euclid()`
multiple_crate_versions = "warn"
must_use_candidate = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
new_without_default = "allow"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pattern_type_mismatch = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_test_prefix = "warn"
renamed_function_params = "warn"
return_self_not_must_use = "warn"
self_named_module_files = "forbid"
unseparated_literal_suffix = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
should_panic_without_expect = "warn"
single_char_lifetime_names = "warn"
single_match_else = "warn"
str_to_string = "warn"
# suboptimal_flops = "warn" # `mul_add`
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unreadable_literal = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
wildcard_imports = "warn"
