[workspace]
resolver = "3"
members = [
    "crates/dexter-common",
    "crates/dexter-equilibrium",
    "crates/dexter-simulate",
    "crates/dexter",
    "py-dexter",
]
default-members = [
    "crates/*",
]

[workspace.dependencies]
approx = "0.5.1"
ndarray = "0.17.2"
thiserror = "2.0.18"
criterion = "0.8.2"
parabola = "0.1.1"
rsl-interpolation = { git = "https://github.com/George-Tsiamasiotis/rsl-interpolation", branch = "dev", features = ["openblas-system"] }

dexter = { path = "crates/dexter" }
dexter-common = { path = "crates/dexter-common" }
dexter-equilibrium = { path = "crates/dexter-equilibrium" }
dexter-simulate = { path = "crates/dexter-simulate" }

[workspace.package]
authors = ["George Tsiamasiotis"]
edition = "2024"
rust-version = "1.91.1"
license = "GPL-3.0-only"
homepage = "https://github.com/George-Tsiamasiotis/DEXTER"
repository = "https://github.com/George-Tsiamasiotis/DEXTER"
documentation = "https://github.com/George-Tsiamasiotis/DEXTER"
description = "Calculations and simulations in reconstructed equilibria of toroidal fusion devices."
keywords = ["dexter", "physics", "plasma", "fusion"]
categories = ["science", "simulation", "visualization"]

[workspace.metadata]
netcdf_version = "0.0.1"

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# Bevy tip

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.profiling.package."*"]
opt-level = 3
debug = true

# ==========================================================================

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
nonstandard-style = "deny"
redundant_imports = "warn"
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"
unused_results = "warn"
ambiguous_negative_literals = "warn"

[workspace.lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
assigning_clones = "deny"
branches_sharing_code = "deny"
cfg_not_test = "deny"
cloned_instead_of_copied = "deny"
comparison_chain = "deny"
derive_partial_eq_without_eq = "deny"
disallowed_script_idents = "allow"
doc_broken_link = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
doc_paragraphs_missing_punctuation = "deny"
else_if_without_else = "deny"
equatable_if_let = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
if_not_else = "deny"
if_then_some_else_none = "deny"
ignore_without_reason = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
integer_division = "deny"
large_types_passed_by_value = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
macro_use_imports = "forbid"
manual_assert = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
min_ident_chars = "deny"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny" # use `rem_euclid()`
multiple_crate_versions = "deny"
must_use_candidate = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
new_without_default = "allow"
nonstandard_macro_braces = "deny"
option_as_ref_cloned = "deny"
or_fun_call = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_test_prefix = "deny"
renamed_function_params = "deny"
return_self_not_must_use = "deny"
self_named_module_files = "forbid"
unseparated_literal_suffix = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
should_panic_without_expect = "deny"
single_char_lifetime_names = "deny"
single_match_else = "deny"
str_to_string = "deny"
# suboptimal_flops = "deny" # `mul_add`
suspicious_operation_groupings = "deny"
too_long_first_doc_paragraph = "deny"
trait_duplication_in_bounds = "deny"
uninlined_format_args = "deny"
unnecessary_literal_bound = "deny"
unreadable_literal = "deny"
unused_result_ok = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
wildcard_imports = "deny"
