[project]
name = "dexter"
version = "0.0.1-pre.18"
description = "Calculations and simulations in analytical and reconstructed equilibria of toroidal fusion devices."
readme = "README.md"
authors = [
    { name = "George-Tsiamasiotis", email = "gt.develop@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "semver>=3.0.4",
]

[tool.maturin]
module-name = "dexter._core"
python-packages = ["dexter"]
python-source = "./py-dexter/"
manifest-path="./py-dexter/Cargo.toml"
# This also seems to solver maturin's and rust-analyzer's cache invalidation
# problem which forces pyo3 and rust-numpy to recompile every time
profile = "release"
editable-profile = "release"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "maturin-import-hook>=0.3.0",
    "patchelf>=0.17.2.4",
    "xarray>=2025.10.1",
    "netcdf4>=1.7.3",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

[tool.pytest.ini_options]
filterwarnings = ['ignore:.*Figure.*'] # matplotlib
testpaths = [
    "./py-dexter/pytests",
    "./py-dexter/dexter/equilibrium/objects.py",
    "./py-dexter/dexter/plots",
    "./docs/docs/",
] # Run from workspace root
addopts = """
    --durations 2
    --doctest-glob='*.md'
    --doctest-glob='*.pyi'
    --doctest-glob='*.py'
    --doctest-modules
     --cov=dexter --cov-report term --cov-report html
"""
