[project]
name = "dexter"
version = "0.1.7-pre.20"
description = "Calculations and simulations in analytical and reconstructed equilibria of toroidal fusion devices."
readme = "README.md"
authors = [
    { name = "George-Tsiamasiotis", email = "gt.develop@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alpha-shapes>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pint>=0.25.3",
    "semver>=3.0.4",
]

[tool.maturin]
module-name = "dexter._core"
python-packages = ["dexter"]
python-source = "./py-dexter/"
manifest-path="./py-dexter/Cargo.toml"
# This also seems to solver maturin's and rust-analyzer's cache invalidation
# problem which forces pyo3 and rust-numpy to recompile every time
profile = "release"
editable-profile = "release"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "maturin-import-hook>=0.3.0",
    "patchelf>=0.17.2.4",
    "xarray>=2026.2.0",
    "netcdf4>=1.7.4",
]
plot = [
    "pygobject>=3.56.2",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
]

[tool.pytest.ini_options]
testpaths = [
    "./py-dexter/pytests",
    "./py-dexter/dexter/equilibrium/*",
    "./py-dexter/dexter/simulate/*",
    "./py-dexter/dexter/common.py",
    "./docs/docs/",
] # Run from workspace root
addopts = """
    --durations 2
    --doctest-glob='*.md'
    --doctest-glob='*.pyi'
    --doctest-glob='*.py'
    --doctest-modules
     --cov=dexter --cov-report term --cov-report html
"""
filterwarnings = [
    "ignore:.*Figure.*", # matplotlib non-interactive
    "ignore:.*unix_signal_add_full.*" # matplotlib-pygobject deprecation warning
]

[project.scripts]
dexter-bfield-plot = "scripts:bfield_plot"
dexter-flux-surface-plot = "scripts:flux_surface_plot "
dexter-boozer-theta-plot = "scripts:boozer_theta_plot "
dexter-midplane-plot = "scripts:midplane_plot "
