[package]
name = "particle"
version = "0.1.2"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Single particle simulation in toroidal fusion devices"

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
criterion.workspace = true
safe_unwrap.workspace = true
rsl-interpolation.workspace = true
utils= {path = "../utils"}
config = {path = "../config"}
equilibrium = {path = "../equilibrium"}
derive_is_enum_variant = "0.1.1"

[features]
default = []
energy-adaptive-step = []
phase-interpolation = ["equilibrium/phase-interpolation"]

[[bench]]
name = "bench-state"
harness = false

[[bench]]
name = "bench-map"
harness = false
