[package]
name = "poincare"
version = "0.1.1-pre.1"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Poincare maps calculation for toroidal fusion devices"

[dependencies]
ndarray = {workspace = true}
thiserror = {workspace = true}
safe_unwrap = {workspace = true}
config = {path = "../config"}
utils = {path = "../utils"}
equilibrium = {path = "../equilibrium"}
particle = {path = "../particle"}
indicatif = { version = "0.18.2", features = ["rayon"] }
rayon = "1.11.0"

[features]
default = []
energy-adaptive-step = ["particle/energy-adaptive-step"]
phase-interpolation = ["equilibrium/phase-interpolation"]
