[package]
name = "dexter-common"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Common utilities across the workspace"

[lints]
workspace = true
