[package]
name = "dexter-equilibrium"
version = "0.1.3-pre.21"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Representation of Equilibria from analytical formulas and experimental data."

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
rsl-interpolation.workspace = true
netcdf = { version = "0.12.0", features = ["ndarray"] }
semver = "1.0.27"
is_close = "0.1.3"

[features]
openblas-static = ["rsl-interpolation/openblas-static"]
netcdf-static = ["netcdf/static"]
