[package]
name = "dexter-equilibrium"
version = "0.1.6-pre.6"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Representation of Equilibria from analytical formulas and experimental data."

[dependencies]
dexter-common.workspace = true
approx.workspace = true
ndarray.workspace = true
thiserror.workspace = true
rsl-interpolation.workspace = true
netcdf = { version = "0.12.0", features = ["ndarray"] }
semver = "1.0.28"

[dev-dependencies]
criterion.workspace=true

[features]
netcdf-static = ["netcdf/static"]
openblas-static = ["rsl-interpolation/openblas-static"]

[lints]
workspace = true

[[bench]]
name = "evaluations"
harness = false
