[package]
name = "dexter-simulate"
version = "0.1.1-pre.6"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Simulations of charge particles inside a plasma"

[dependencies]
dexter-common.workspace = true
dexter-equilibrium.workspace = true
thiserror.workspace = true
ndarray.workspace = true
approx.workspace = true
rsl-interpolation.workspace = true

[[example]]
name = "integrate"
path = "examples/integrate.rs"

[[example]]
name = "intersect"
path = "examples/intersect.rs"

[[example]]
name = "stepping_method"
path = "examples/stepping_method.rs"
