[package]
name = "dexter-simulate"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Simulations of charge particles inside a plasma"

[dependencies]
dexter-common.workspace = true
dexter-equilibrium.workspace = true
thiserror.workspace = true
ndarray.workspace = true
approx.workspace = true
rsl-interpolation.workspace = true

[lints]
workspace = true

[[example]]
name = "integrate"
path = "examples/integrate.rs"

[[example]]
name = "intersect"
path = "examples/intersect.rs"

[[example]]
name = "stepping_method"
path = "examples/stepping_method.rs"

[[bin]]
name = "analytical_integration"
path = "bin/analytical_integration.rs"

[[bin]]
name = "numerical_integration"
path = "bin/numerical_integration.rs"
