[package]
name = "dexter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
equilibrium = {workspace = true}

[features]
default = []
openblas-static = ["equilibrium/openblas-static"]
netcdf-static = ["equilibrium/netcdf-static"]
