[package]
name = "heap"
version = "0.1.1-pre.5"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "A collection (heap) of many particles."

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
safe_unwrap.workspace = true
utils= {path = "../utils"}
equilibrium = {path = "../equilibrium"}
particle = {path = "../particle"}
indicatif = { version = "0.18.3", features = ["rayon"] }
rayon = "1.11.0"
