[package]
name = "particle"
version = "0.1.3"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Single particle simulation in toroidal fusion devices"

[dependencies]
common = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
criterion = { workspace = true }
rsl-interpolation = { workspace = true }
equilibrium = { workspace = true }
derive_is_enum_variant = "0.1.1"
